@@ -11,4 +11,4 @@ except:
     dialog = xbmcgui.Dialog()
     dialog.ok('[B][COLOR red]ALERT: [/COLOR][/B] RESTART XBMC', 'A new update has recently installed or add-on reconfigured.', 'Please restart XBMC to reflect the changes.', 'You will not be able to access until restart.')
 
-TurtlePlugin.start('plugin.video.tvondesizonex', '1.6.7')
+TurtlePlugin.start('plugin.video.tvondesizonex', '1.6.8')
