@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.turtlex" name="Turtle X" version="1.6.2"
+<addon id="script.module.turtlex" name="Turtle X" version="1.6.3"
 	provider-name="AJ">
 	<requires>
 		<import addon="xbmc.python" version="2.0" />
